[gd_scene load_steps=4 format=3 uid="uid://bvfqjea3tdu73"]

[ext_resource type="Script" path="res://TableSound.gd" id="1_mwsrf"]
[ext_resource type="PackedScene" uid="uid://cehubery3lp7y" path="res://scene/button.tscn" id="2_honiq"]
[ext_resource type="PackedScene" uid="uid://cst2cyl4tdo6k" path="res://scene/sound.tscn" id="3_xn88w"]

[node name="TableSound" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mwsrf")

[node name="Button" parent="." instance=ExtResource("2_honiq")]
visible = false
layout_mode = 0
offset_left = 0.0
offset_top = 0.0
offset_right = 58.0
offset_bottom = 31.0
text = ""

[node name="sound" parent="." instance=ExtResource("3_xn88w")]

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.5
offset_top = -20.0
offset_right = 42.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2
alignment = 1

[node name="volume_bar_box" type="HBoxContainer" parent="MainContainer/VBoxContainer"]
custom_minimum_size = Vector2(85, 0)
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="btns_box" type="HBoxContainer" parent="MainContainer/VBoxContainer"]
custom_minimum_size = Vector2(85, 0)
layout_direction = 1
layout_mode = 2
theme_override_constants/separation = 10

[node name="VBoxContainer2" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2
alignment = 1

[node name="volume_bar_box2" type="HBoxContainer" parent="MainContainer/VBoxContainer2"]
custom_minimum_size = Vector2(85, 0)
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="btns_box2" type="HBoxContainer" parent="MainContainer/VBoxContainer2"]
custom_minimum_size = Vector2(85, 0)
layout_direction = 1
layout_mode = 2
theme_override_constants/separation = 10
